[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmkit"
version = "0.1.0"
description = "Minimal LLM extraction framework: structured outputs, caching, auditing"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[tool.setuptools.packages.find]
include = ["llmkit*"]
